# Gamedev_test_2

./: db.sqlite3  manage.py  pyproject.toml
Gamedev_test_2/: asgi.py  settings.py  urls.py  wsgi.py
game/: admin.py  models.py  views.py
game/migrations/: 0001_initial.py
