[tool.poetry]
name = "gamedev-test-2"
version = "0.1.0"
description = ""
authors = ["Oleg <145393954+Ole6G@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
